--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 <title>Quantum = cool</title>
- <link rel="stylesheet" type="text/css" href="/static/style.css">
+<link rel="stylesheet" type="text/css" href="/static/style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
+<script src="/static/res.js"></script>
 </head>
 <body>
 <center>
